--- a/notebooks/Ejercicios_curso_python_ciencia_datos/2-Practica_Numpy.ipynb
+++ b/notebooks/Ejercicios_curso_python_ciencia_datos/2-Practica_Numpy.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "1MRNIJUZIsKz"
+        "id": "nMihlTZiOVsu"
       },
       "source": [
         "# [PRACTICA DE NUMPY](https://joserzapata.github.io/courses/python-ciencia-datos/numpy/)\n",
@@ -14,7 +14,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "j-QYR7hAIsK0"
+        "id": "tfvtIXILOVsw"
       },
       "source": [
         "<div class=\"alert alert-success\">\n",
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Nlyoo_CfIsK2"
+        "id": "29KBvvElOVsx"
       },
       "source": [
         "Los arreglos de numpy son la base de la computación científica en Python\n",
@@ -42,7 +42,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "WxxgkijLIsK2"
+        "id": "qx6sUV9MOVsy"
       },
       "source": [
         "**Importe NumPy como np**"
@@ -50,10 +50,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 6,
       "metadata": {
         "collapsed": true,
-        "id": "KAV_Zu9UIsK3"
+        "id": "-eZkmlePOVsz"
       },
       "outputs": [],
       "source": [
@@ -63,7 +63,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "N9DbttdjIsK4"
+        "id": "xu5CkVhlOVsz"
       },
       "source": [
         "**Cree un arreglo de ceros de 10 elementos**"
@@ -71,9 +71,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
-        "id": "g_yIDZ2LIsK5"
+        "id": "UeyxPCZTOVs0"
       },
       "outputs": [],
       "source": [
@@ -82,13 +82,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 11,
       "metadata": {
-        "id": "-5J3Hh-PIsK7",
-        "outputId": "191d798a-478f-404e-924a-1449bbc0f227",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "d68AveabOVs1",
+        "outputId": "2c3103ea-b7ee-4512-a281-60f4c0348bee"
       },
       "outputs": [
         {
@@ -107,7 +107,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "jb_xzWl6IsK8"
+        "id": "x_8bugxOOVs2"
       },
       "source": [
         "**Cree un arreglo de unos de 10 elementos**"
@@ -117,7 +117,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "gHQ__uSoIsK9"
+        "id": "OEXvtPBGOVs2"
       },
       "outputs": [],
       "source": [
@@ -126,13 +126,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 12,
       "metadata": {
-        "id": "jsssAW2uIsK-",
-        "outputId": "4ed1f958-d3cb-44f3-fa21-435ef2226052",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XUGFAMEDOVs2",
+        "outputId": "a77b0947-5f55-4d5c-a915-b49e132a8251"
       },
       "outputs": [
         {
@@ -151,7 +151,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "-RdriKB8IsK-"
+        "id": "NvBdoT-IOVs3"
       },
       "source": [
         "**Cree un arreglo de cincos de 10 elementos**"
@@ -161,7 +161,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "s8Ksq5P0IsK-"
+        "id": "iY8LdV0eOVs3"
       },
       "outputs": [],
       "source": [
@@ -170,29 +170,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
-        "id": "Dtz3842hIsK_",
-        "outputId": "80b63a23-8dcd-4106-bff4-d1a90374160f"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "USiEHah1OVs4",
+        "outputId": "f6a55d60-972e-42c0-fb0e-7baac740b469"
       },
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "array([5., 5., 5., 5., 5., 5., 5., 5., 5., 5.])"
-            ]
-          },
-          "execution_count": 7,
-          "metadata": {},
-          "output_type": "execute_result"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[5. 5. 5. 5. 5. 5. 5. 5. 5. 5.]\n"
+          ]
         }
       ],
-      "source": []
+      "source": [
+        "arr = np.ones(10)*5\n",
+        "print(arr)"
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "aP3EMCMsIsK_"
+        "id": "ZYk6NiLzOVs4"
       },
       "source": [
         "**Cree un arreglo de números enteros Del 10 al 50 (incluido)**"
@@ -202,7 +205,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "1uuaYEl3IsK_"
+        "id": "nqzEBidnOVs4"
       },
       "outputs": [],
       "source": [
@@ -211,31 +214,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
-        "id": "ODHH4nB0IsK_",
-        "outputId": "5509baa8-2427-4914-f6b8-b78c4f93c4d9"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "v80bqbreOVs4",
+        "outputId": "3c347c04-5c1e-441a-9c11-2f04048d9a45"
       },
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "array([10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26,\n",
-              "       27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43,\n",
-              "       44, 45, 46, 47, 48, 49, 50])"
-            ]
-          },
-          "execution_count": 9,
-          "metadata": {},
-          "output_type": "execute_result"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33\n",
+            " 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50]\n"
+          ]
         }
       ],
-      "source": []
+      "source": [
+        "arr = np.arange(10,51)\n",
+        "print(arr)"
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "gxxhfo4zIsLA"
+        "id": "RNFks6LqOVs5"
       },
       "source": [
         "**Cree un arreglo de los números enteros pares Del 10 al 50 (incluidos)**"
@@ -245,7 +250,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "oh2sMkAAIsLA"
+        "id": "2Tnyq8U0OVs5"
       },
       "outputs": [],
       "source": [
@@ -254,30 +259,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
-        "id": "mziokAvBIsLA",
-        "outputId": "fc7770f1-77d4-470e-ad0f-f75a18fc2ecb"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wMYyqAVBOVs5",
+        "outputId": "a976c914-1f6b-4cf2-8030-eac21fb6ec1b"
       },
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "array([10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 40, 42,\n",
-              "       44, 46, 48, 50])"
-            ]
-          },
-          "execution_count": 11,
-          "metadata": {},
-          "output_type": "execute_result"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[10 12 14 16 18 20 22 24 26 28 30 32 34 36 38 40 42 44 46 48 50]\n"
+          ]
         }
       ],
-      "source": []
+      "source": [
+        "arr = np.arange(10,51,2)\n",
+        "print(arr)"
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "a5j_Jy_6IsLA"
+        "id": "dOa9LOqWOVs5"
       },
       "source": [
         "**Crear una matrix de 3x3 con valores del 0 al 8 (incluido)**"
@@ -287,7 +294,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "dAtOcqcxIsLA"
+        "id": "iwPxvCTvOVs5"
       },
       "outputs": [],
       "source": [
@@ -298,8 +305,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Z7Jmg28RIsLB",
-        "outputId": "df508517-c94c-400d-d6ad-7dcd0d7947a3"
+        "id": "uut_LRYqOVs5",
+        "outputId": "95e05524-3836-48ed-d291-71737d20badf"
       },
       "outputs": [
         {
@@ -320,7 +327,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "FDaPmkJ5IsLB"
+        "id": "g6btOkKpOVs5"
       },
       "source": [
         "**Crear la matriz identidad de 3x3**"
@@ -330,7 +337,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Bb0_bns2IsLB"
+        "id": "NhH_IU3qOVs6"
       },
       "outputs": [],
       "source": [
@@ -341,8 +348,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "74QZmS_SIsLB",
-        "outputId": "dde8611c-b8ef-4b78-9a75-5c2e770c1055"
+        "id": "9yByQtiPOVs6",
+        "outputId": "37537a9f-c6e6-4606-de6b-37011dfd3408"
       },
       "outputs": [
         {
@@ -363,7 +370,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Y3I8_G4kIsLC"
+        "id": "L1RKsb6JOVs6"
       },
       "source": [
         "**Use NumPy para generar un numero aleatorio entre 0 y 1**"
@@ -373,7 +380,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "-mYZwFTZIsLC"
+        "id": "MR-56cjTOVs6"
       },
       "outputs": [],
       "source": [
@@ -384,8 +391,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "j6fSrpOLIsLC",
-        "outputId": "01c45a7b-4b7c-43a6-aaad-06d9978400f3"
+        "id": "C9GWrcEsOVs6",
+        "outputId": "e530e8cc-f3dd-47df-9feb-30fa383927e8"
       },
       "outputs": [
         {
@@ -404,7 +411,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Vtw0qE5RIsLC"
+        "id": "8U3hIBEVOVs6"
       },
       "source": [
         "**Use NumPy para generar un arreglo de 25 números aleatorios que sean de la distribucion normal estandar**"
@@ -414,7 +421,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "VcoIorr3IsLC"
+        "id": "htPU8UriOVs6"
       },
       "outputs": [],
       "source": [
@@ -425,8 +432,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "OIAlXJu5IsLD",
-        "outputId": "fb11aac3-05dc-403b-ed0d-72184b4f8bf5"
+        "id": "-JjyJqmrOVs7",
+        "outputId": "7bac975a-dc16-4fb7-ca3f-29cd1cbf262d"
       },
       "outputs": [
         {
@@ -449,7 +456,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "j6BtnqnoIsLD"
+        "id": "tbYvw45GOVs7"
       },
       "source": [
         "**Cree un arreglo de 20 elementos linealmente espaciados entre 0 y 1:**"
@@ -459,7 +466,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "wxLXXpPpIsLD"
+        "id": "kVAFCenVOVs7"
       },
       "outputs": [],
       "source": [
@@ -470,8 +477,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "qJvd9a7SIsLD",
-        "outputId": "bcb0f426-8778-4c89-bd84-488e89d38a63"
+        "id": "SzN55d-YOVs7",
+        "outputId": "461f9c42-e63f-460a-bef0-2a0161c80e81"
       },
       "outputs": [
         {
@@ -493,7 +500,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "2-neaGqYIsLD"
+        "id": "zSAktM11OVs7"
       },
       "source": [
         "**Indexacion y seleccion con Numpy**\n",
@@ -506,7 +513,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "x_09cTvPIsLE"
+        "id": "xO5gSb68OVs8"
       },
       "outputs": [],
       "source": [
@@ -517,8 +524,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Y6fS8kAXIsLE",
-        "outputId": "e5c382db-9143-4dba-aa24-410432877b62"
+        "id": "msksZYBLOVs8",
+        "outputId": "c64496c1-a40a-43c2-ccaa-8d20200d4e45"
       },
       "outputs": [
         {
@@ -541,7 +548,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "GbBYMFH1IsLE"
+        "id": "ycteyM1xOVs8"
       },
       "source": [
         "replique los resultados que siguen:\n"
@@ -551,7 +558,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "RXycwvW2IsLQ"
+        "id": "QlFCqA1iOVtB"
       },
       "outputs": [],
       "source": [
@@ -563,8 +570,8 @@
       "execution_count": null,
       "metadata": {
         "collapsed": true,
-        "id": "lgMNPxfXIsLR",
-        "outputId": "aad71932-7cd5-4a22-e4f6-b45d746f11aa"
+        "id": "E9SJ612UOVtC",
+        "outputId": "5e626cb2-0980-4742-9333-ef2c9c263b22"
       },
       "outputs": [
         {
@@ -586,7 +593,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "6sOVTBuPIsLR"
+        "id": "wktTo6p_OVtC"
       },
       "outputs": [],
       "source": [
@@ -598,8 +605,8 @@
       "execution_count": null,
       "metadata": {
         "collapsed": true,
-        "id": "A7nDUxw2IsLR",
-        "outputId": "326832cc-c391-4ca6-fa8f-cd62257435dc"
+        "id": "77c3MSgoOVtD",
+        "outputId": "c98828b1-b87b-4639-e75e-7b34311d3e7d"
       },
       "outputs": [
         {
@@ -619,7 +626,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "js8bDWPpIsLS"
+        "id": "2n_PEe3JOVtD"
       },
       "outputs": [],
       "source": [
@@ -631,8 +638,8 @@
       "execution_count": null,
       "metadata": {
         "collapsed": true,
-        "id": "n2h4QPDLIsLS",
-        "outputId": "a014813f-3697-42dc-f84b-e4a43aef3678"
+        "id": "bNDOkpB7OVtD",
+        "outputId": "6eef7cd2-654d-40b2-86a0-172b5e29bf4c"
       },
       "outputs": [
         {
@@ -654,7 +661,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "bxKMwBVqIsLS"
+        "id": "bhembT9dOVtD"
       },
       "outputs": [],
       "source": [
@@ -666,8 +673,8 @@
       "execution_count": null,
       "metadata": {
         "collapsed": true,
-        "id": "dLiZ2r0VIsLS",
-        "outputId": "ed89b870-aba0-47ee-b485-f4036c56a73a"
+        "id": "88cXuIGfOVtE",
+        "outputId": "1931518d-2115-40e1-9d81-f4d900c632e2"
       },
       "outputs": [
         {
@@ -687,7 +694,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "jd_dbAMDIsLS"
+        "id": "giTNb7ikOVtE"
       },
       "outputs": [],
       "source": [
@@ -699,8 +706,8 @@
       "execution_count": null,
       "metadata": {
         "collapsed": true,
-        "id": "2t0WHMPKIsLT",
-        "outputId": "2f8c18f4-6b47-4d83-8e72-8ccd58b193e0"
+        "id": "b2izXd7tOVtE",
+        "outputId": "38538f7c-7962-4152-92e3-8adb1b3f5fe4"
       },
       "outputs": [
         {
@@ -720,7 +727,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "s-IIdi8IIsLT"
+        "id": "ctOsk3-5OVtE"
       },
       "source": [
         "**Obtenga la suma de todos los valores de la matriz**"
@@ -730,7 +737,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "GdzsCRoNIsLT"
+        "id": "Yu87lLlPOVtF"
       },
       "outputs": [],
       "source": [
@@ -741,8 +748,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "FZtxz7MeIsLT",
-        "outputId": "7b475100-3d6c-428e-afcc-9ff3da69fab6"
+        "id": "RsqRHTsCOVtF",
+        "outputId": "efc4c962-2f76-41b4-fa1e-17609ef444a7"
       },
       "outputs": [
         {
@@ -761,7 +768,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Jd8_zNuQIsLT"
+        "id": "z5BWYKgEOVtF"
       },
       "source": [
         "**Obtenga la desviación estándar de los valores de la matriz**"
@@ -771,7 +778,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Y3bMVN5wIsLU"
+        "id": "Zx6AvNPSOVtF"
       },
       "outputs": [],
       "source": [
@@ -782,8 +789,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "FYmRPl3XIsLU",
-        "outputId": "07373dec-8946-4de8-a9b5-1391f031bd50"
+        "id": "My_I9RB2OVtG",
+        "outputId": "f99ba664-70d0-46c1-f9f0-af82b50e70b8"
       },
       "outputs": [
         {
@@ -802,7 +809,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "qXIi9puRIsLU"
+        "id": "KLmV8fq-OVtG"
       },
       "source": [
         "**Obtener la suma de cada una de las columnas de la matriz**"
@@ -812,7 +819,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "ib20nMTNIsLU"
+        "id": "fh05FtUKOVtG"
       },
       "outputs": [],
       "source": [
@@ -823,8 +830,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Oe9gyZa_IsLU",
-        "outputId": "5a72c923-aaf0-453d-c647-d1b01eb74162"
+        "id": "3cj2wdU_OVtG",
+        "outputId": "f8bf5bed-c677-47d3-f1b3-062f0f930d75"
       },
       "outputs": [
         {
@@ -843,7 +850,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "UcdXTaugIsLV"
+        "id": "2-fMDpsBOVtG"
       },
       "source": [
         "## Referencia\n",
