--- a/notebooks/Ejercicios_curso_python_ciencia_datos/2-Practica_Numpy.ipynb
+++ b/notebooks/Ejercicios_curso_python_ciencia_datos/2-Practica_Numpy.ipynb
@@ -303,26 +303,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "uut_LRYqOVs5",
-        "outputId": "95e05524-3836-48ed-d291-71737d20badf"
+        "outputId": "f29a9785-d879-4f5d-a457-8643dd9a34ab"
       },
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "array([[0, 1, 2],\n",
-              "       [3, 4, 5],\n",
-              "       [6, 7, 8]])"
-            ]
-          },
-          "execution_count": 13,
-          "metadata": {},
-          "output_type": "execute_result"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0 1 2]\n",
+            " [3 4 5]\n",
+            " [6 7 8]]\n"
+          ]
         }
       ],
-      "source": []
+      "source": [
+        "arr = np.arange(0,9).reshape(3,3)\n",
+        "print(arr)\n"
+      ]
     },
     {
       "cell_type": "markdown",
